<resources>
    <string name="app_name">Digi Restaurant User</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm Password ***</string>
    <string name="password">password ***</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="already_have">Already have an account! Click the Login button .</string>
    <string name="have_an_account">If you already have an account, click on</string>
    <string name="login">\'\' Login \'\'</string>
    <string name="create_account_and_continue">Create Account and Continue</string>
    <string name="password2">Password</string>
    <string name="confirm_password_2">Confirm Password</string>
    <string name="username_or_e_mail">e-mail@domain.com</string>
    <string name="username_e_mail">E-mail</string>
    <string name="phone_88_01">phone +88 01*******</string>
    <string name="phone_number">Phone Number</string>
    <string name="restaurant_name">your name</string>
    <string name="restaurant_name_2">Your Name</string>
    <string name="create_an_account">Create An Account</string>
    <string-array name="item_category">
        <item>Select Category</item>
        <item>Breakfast</item>
        <item>Burger</item>
        <item>Buffet</item>
        <item>Beverage</item>
        <item>Chicken</item>
        <item>Dinner</item>'
        <item>Fast Food</item>
        <item>Lunch</item>
        <item>Pizza</item>
        <item>Snacks</item>
        <item>Sandwich</item>
        <item>Shawrma</item>
        <item>Set Menu</item>
    </string-array>
</resources>