<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="#EAEAEA"
    tools:context=".User_Registration">
    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"/>

    <ScrollView
        android:layout_below="@+id/text_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name_2"
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_700"/>
            <EditText
                android:id="@+id/user_name_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/restaurant_name"
                android:padding="8dp"
                android:inputType="text"
                android:background="@drawable/backboarder"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginTop="5dp"
                android:textColor="@color/purple_700"/>

            <EditText
                android:id="@+id/user_mobile_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/backboarder"
                android:hint="@string/phone_88_01"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_e_mail"
                android:layout_marginTop="5dp"
                android:textColor="@color/purple_700"/>
            <EditText
                android:id="@+id/user_mail_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/username_or_e_mail"
                android:padding="8dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/backboarder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password2"
                android:layout_marginTop="5dp"
                android:textColor="@color/purple_700"/>
            <EditText
                android:id="@+id/user_password_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:background="@drawable/backboarder"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_2"
                android:layout_marginTop="5dp"
                android:textColor="@color/purple_700"/>
            <EditText
                android:id="@+id/user_confirm_pass_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/confirm_password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:background="@drawable/backboarder"/>

            <Button
                android:id="@+id/user_signup_button"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/create_account_and_continue"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account"/>
                <TextView
                    android:id="@+id/go_login_page_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>